# jewelapp.io

./: .gitignore  README.md
gui/: CMakeLists.txt  Makefile  Pipfile  README.md  icon.icns  main.py  setup.py
gui/app/: canvas.py  open_gl_frame.py
gui/jewelapp/: CHANGELOG  LICENSE  README.rst  pyproject.toml
gui/jewelapp/src/jewelapp/: __main__.py
libjewel/: CMakeLists.txt  library.c  library.h
libjewel_tests/: CMakeLists.txt
